  Py_FileSystemDefaultEncoding is not set.

- Issue #10095: fp_setreadl() doesn't reopen the file, reuse instead the file
  descriptor.

- Issue #9418: Moved private string methods ``_formatter_parser`` and
  ``_formatter_field_name_split`` into a new ``_string`` module.

- Issue #9992: Remove PYTHONFSENCODING environment variable.

Library
-------

- Issue #4471: Add the IMAP.starttls() method to enable encryption on
  standard IMAP4 connections.  Original patch by Lorenzo M. Catucci.

- Issue #1466065: Add 'validate' option to base64.b64decode to raise
  an error if there are non-base64 alphabet characters in the input.

- Issue #10386: Add __all__ to token module; this simplifies importing
  in tokenize module and prevents leaking of private names through
  import *.

- Issue #4471: Properly shutdown socket in IMAP.shutdown().  Patch by
  Lorenzo M. Catucci.

- Fix IMAP.login() to work properly.

- Issue #9244: multiprocessing pool worker processes could terminate
  unexpectedly if the return value of a task could not be pickled.  Only
  the ``repr`` of such errors are now sent back, wrapped in an
  ``MaybeEncodingError`` exception.

- Issue #9244: The ``apply_async()`` and ``map_async()`` methods
  of ``multiprocessing.Pool`` now accepts a ``error_callback`` argument.
  This can be a callback with the signature ``callback(exc)``, which will
  be called if the target raises an exception.

- Issue #10022: The dictionary returned by the ``getpeercert()`` method
  of SSL sockets now has additional items such as ``issuer`` and ``notBefore``.

- ``usenetrc`` is now false by default for NNTP objects.

- Issue #1926: Add support for NNTP over SSL on port 563, as well as
  STARTTLS.  Patch by Andrew Vant.

- Issue #10335: Add tokenize.open(), detect the file encoding using
  tokenize.detect_encoding() and open it in read only mode.

- Issue #10321: Added support for binary data to smtplib.SMTP.sendmail,