@@ -63,6 +63,9 @@ Core and Builtins
 Library
 -------
 
+- Fix Fraction.__hash__ so that Fraction.__hash__(-1) is -2.  (See
+  also issue #10356.)
+
 - Issue #4471: Add the IMAP.starttls() method to enable encryption on
   standard IMAP4 connections.  Original patch by Lorenzo M. Catucci.
 
